add face image to about section and delete extra images

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <h3 id="about-me">About Me</h3>
         
         <div class="face-lockup">
-            <div class="face-img icon-user"></div>
+            <div class="face-img"></div>
             <div class="icon-basketball"></div>
             <div class="icon-code"></div>
             <div class="icon-gamepad"></div>
