change showcase on footer nav to work

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
             <div class="content-wrap">
                 <nav>
                     <a href="#about-me">About Me</a>
-                    <a href="#work">Showcase</a>
+                    <a href="#work">Work</a>
                     <a href="#contact">Contact</a>
                 </nav>
                 
